"""OpenBSW - Open Basic Software for Embedded Systems."""

module(
    name = "openbsw",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "platforms", version = "0.0.10")

register_toolchains("//bazel/toolchains:arm_none_eabi_gcc_toolchain")
register_toolchains("//bazel/toolchains:arm_none_eabi_clang_toolchain")
