# *******************************************************************************
# Copyright (c) 2024 Accenture
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

[package]
name = "rust_hello_world"
version.workspace = true
documentation.workspace = true
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
# External crates
log.workspace = true

# openbsw-internal crates
openbsw_console_out.workspace = true
openbsw-logger.workspace = true
openbsw_panic_handler.workspace = true
