# Character I/O driver abstraction.

cc_library(
    name = "bspCharInputOutput",
    srcs = [
        "src/charInputOutput/bspIo.cpp",
        "src/charInputOutput/charIo.cpp",
        "src/charInputOutput/charIoSerial.cpp",
    ],
    hdrs = glob(["include/**"]),
    includes = ["include"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//bazel/app_config:bsp_configuration",
        "//libs/3rdparty/printf",
        "//libs/bsw/bsp",
    ],
)

# Mock target for unit testing
cc_library(
    name = "bspCharInputOutputMock",
    hdrs = glob(["mock/include/**"]),
    includes = ["mock/include"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [":bspCharInputOutput"],
)
