# Async FreeRTOS implementation.

# FreeRTOS configuration headers (FreeRTOSConfig.h)
cc_library(
    name = "freeRtosConfiguration",
    hdrs = glob(["freeRtosConfiguration/**"]),
    includes = ["freeRtosConfiguration"],
    visibility = ["//visibility:public"],
    deps = [
        "//bazel/app_config:async_core_configuration",
        "//bazel/app_config:freertos_core_configuration",
        "//libs/bsw/platform",
    ],
)

# Header-only target: provides FreeRtosAdapter.h etc. without pulling in asyncFreeRtosImpl.
# Used by asyncBinding to break the cycle: asyncBinding -> asyncFreeRtos -> asyncFreeRtosImpl -> asyncBinding.
# NOTE: Does NOT depend on //libs/bsw/async to avoid cycle. Consumers must ensure async is in the dep graph.
cc_library(
    name = "asyncFreeRtos_hdrs",
    hdrs = glob(["include/**"]),
    includes = [
        "freeRtosConfiguration",
        "include",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":freeRtosConfiguration",
        "//libs/3rdparty/etl",
        "//libs/3rdparty/freeRtos",
        "//libs/bsw/bsp",
        "//libs/bsw/platform",
        "//libs/bsw/timer",
    ],
)

cc_library(
    name = "asyncFreeRtos",
    hdrs = glob(["include/**"]),
    includes = [
        "freeRtosConfiguration",
        "include",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [":asyncFreeRtosImpl"],
)

cc_library(
    name = "asyncFreeRtosImpl",
    srcs = [
        "src/async/Async.cpp",
        "src/async/FutureSupport.cpp",
        "src/async/Hook.cpp",
        "src/async/Types.cpp",
    ],
    hdrs = glob([
        "include/**",
        "freeRtosConfiguration/**",
    ]),
    alwayslink = True,
    includes = [
        "freeRtosConfiguration",
        "include",
    ],
    tags = ["manual"],
    target_compatible_with = select({
        "//bazel/configs:unit_test": ["//bazel/configs:referenceapp_only"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//bazel/app_config:async_binding",
        "//bazel/app_config:async_core_configuration",
        "//libs/3rdparty/etl",
        "//libs/3rdparty/freeRtos",
        "//libs/bsp/bspInterrupts",
        "//libs/bsw/asyncImpl",
        "//libs/bsw/bsp",
        "//libs/bsw/common",
        "//libs/bsw/platform",
        "//libs/bsw/timer",
    ],
)

# Mock target for unit testing
cc_library(
    name = "asyncFreeRtosMock",
    hdrs = glob(["mock/include/**"]),
    includes = ["mock/include"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        ":asyncFreeRtos",
        "//libs/3rdparty/googletest:gtest",
    ],
)
